--- a/form.html
+++ b/form.html
@@ -4,10 +4,8 @@
     <meta charset="utf-8">
   </head>
     <body>
-      <form action="http://localhost/method.php" method="post">
-        <input type="text" name="id">
-        <input type="password" name="pwd">
-
+      <form action="http://localhost/upload.php" method="post enctype="multipart/form-data">
+        <input type ="file" name="sdfs">
         <input type="submit">
       </form>
     </body>
